--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -22,6 +22,7 @@
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
+    "@types/node": "^20.8.2",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
