--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -15,15 +15,19 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "cross-fetch": "^4.0.0",
+    "lamejs": "github:zhuker/lamejs",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.1",
     "socket.io-client": "^4.7.2",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.69.0",
+    "sass-loader": "^13.3.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
