--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mime": "^3.0.0",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.6.2",
     "typescript": "^5.1.3"
   }
