--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -18,6 +18,8 @@
     "lamejs": "github:zhuker/lamejs",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.1",
+    "process": "^0.11.10",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.47",
