--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^8.11.3",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.6.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "wrtc": "^0.4.7"
   }
 }
