--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.5.4",
     "@types/node": "^20.3.1",
     "nodemon": "^2.0.22",
     "tsc-watch": "^6.0.4"
@@ -24,6 +25,7 @@
     "@types/nodemailer": "^6.4.11",
     "@types/pg": "^8.10.3",
     "bcrypt": "^5.1.1",
+    "connect-history-api-fallback": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
