--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "cross-fetch": "^4.0.0",
+    "fix-webm-duration": "^1.0.5",
     "gsap": "^3.12.5",
     "lamejs": "github:zhuker/lamejs",
     "primeicons": "^6.0.1",
